add laravel excel

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "netojose/laravel-api-explorer": "^2.0",
         "nwidart/laravel-modules": "^9.0",
+        "psr/simple-cache": "^1.0",
         "silviolleite/laravelpwa": "^2.0",
         "victorybiz/geoip-location": "^1.1"
     },
