--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "joedixon/laravel-translation": "^1.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.75",
+        "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
