--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=pos-system
-DB_USERNAME=
-DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=migae5o25m2psr4q.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_DATABASE=qv0y8j43ldsxxt3e
+DB_USERNAME= d80bzhxg9s0qcp4y
+DB_PASSWORD= mimqf52i6i1gh82r
 
 
 BROADCAST_DRIVER=log
